# aseprite-mcp-colony

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
aseprite_mcp/: __init__.py  __main__.py  presets.py
aseprite_mcp/core/: commands.py  live.py
aseprite_mcp/tools/: __init__.py  animation.py  bridge.py  canvas.py  drawing.py  export_bevy.py  palette_apply.py  palette_extract.py  palette_ramp.py  presets_tools.py
extension/aseprite-mcp-colony/: extension.lua  package.json
presets/animation/: cycles.json  manifest.json
presets/dither/: kernels.json  manifest.json  patterns.json
presets/palettes/: 1bit-monitor-glow.gpl  arne-16.gpl  borkfest.gpl  commodore64.gpl  fairydust-8.gpl  famicube.gpl  kirokaze-gameboy.gpl  manifest.json  moonlight-gb.gpl  mushroom.gpl  rustic-gb.gpl
presets/reference/: animation_principles.json  color_theory.json  dither_guidance.json  easing_curves.json  manifest.json  pixel_art_principles.json  sprite_size_conventions.json
presets/tiles/: brick_7-1.json  cobble_irregular.json  dirt_speckle.json  grass_blob.json  ice_block.json  lava_anim_4f.json  manifest.json  metal_grate.json  plank_horizontal.json  roof_shingle.json  sand_dune.json  stone_wall_block.json  water_anim_4f.json
skills/aseprite-bevy-pipeline/: SKILL.md
skills/aseprite-palette-coherence/: SKILL.md
skills/aseprite-presets-tour/: SKILL.md
