[project]
name = "aseprite-mcp-colony"
version = "0.1.0"
description = "MCP server piloting Aseprite for the Colony / Project VN sprite pipeline (fork of diivi/aseprite-mcp)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pillow>=11.0.0",
    "websockets>=14.0",
]
